Separate game logic from console graphics
Make it easier to swap out the graphics by extracting the board logic to it's own library.

--- a/TwentyFortyEight.Console/Properties/launchSettings.json
+++ b/TwentyFortyEight.Console/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "TwentyFortyEight": {
+    "TwentyFortyEight.Console": {
       "commandName": "Project",
       "commandLineArgs": "10"
     }
