Implement and Test Board SaveState

--- a/TwentyFortyEight.Tests/TwentyFortyEight.Tests.csproj
+++ b/TwentyFortyEight.Tests/TwentyFortyEight.Tests.csproj
@@ -21,4 +21,19 @@
     <ProjectReference Include="..\TwentyFortyEight\TwentyFortyEight.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="TestingResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>TestingResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="TestingResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>TestingResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
